# lox

./: .gitignore  Makefile  README.md  run-clox.sh  run-jlox.sh  run-plox.sh  setup-plox.sh
clox/: chunk.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
examples/: assignment.lox  break.lox  classes.lox  redefine.lox  short-circuit.lox  while-loop.lox
jlox/: AstPrinter.java  Environment.java  Expr.java  GenerateAst.java  Interpreter.java  Lox.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Scanner.java  Stmt.java  Token.java  TokenType.java
plox/: common.py  pyproject.toml  repl.py  scanner.py
plox/plox/: __main__.py  ast.py  ast_printer.py  common.py  environment.py  interpreter.py  parser.py  repl.py  scanner.py
plox/plox/ast/: expr.py
plox/tests/: test_ast_printer.py  test_codegen.py  test_environment.py  test_interpreter.py  test_parser.py  test_scanner.py
plox/tools/: generate_ast.py
